--- a/style.css
+++ b/style.css
@@ -21,7 +21,9 @@ body {
 }
 
 .addButton,
-#drawButton {
+#drawButton,
+#settingsButton,
+#output {
   width: calc(100% - 1rem);
   margin: .5rem;
   padding: .5rem;
@@ -33,8 +35,16 @@ body {
   cursor: pointer;
 }
 
-#drawButton {
+#drawButton,
+#settingsButton,
+#output {
   background-color: white !important;
+}
+
+#output {
+  width: calc(100% - 2rem);
+  cursor: default;
+  outline: 0;
 }
 
 .addButton:hover,
@@ -91,7 +101,7 @@ body {
   background-color: #eee;
 }
 
-#autoDrawLabel {
+.settingsLabel {
   width: calc(100% - 2rem);
   margin: .5rem;
   padding: .5rem;
@@ -177,4 +187,43 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+#settings {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  width: 95vw;
+  max-width: 500px;
+  height: 90vh;
+  max-height: 700px;
+  background-color: white;
+  border-radius: 1rem;
+  box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+  display: none;
+  z-index: 100;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 2rem;
+  gap: .5rem;
+}
+
+#settingsHide {
+  position: fixed;
+  display: none;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
+#copywrite {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  font-size: 12px;
+  margin: 5px;
+  text-decoration: none;
+  color: black;
 }
