--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body {
   overflow: hidden;
 }
 
+button,
+select {
+  color: black;
+}
+
 #sidebar {
   position: absolute;
   right: 0;
@@ -61,6 +66,7 @@ body {
   background-color: white;
   border: 1px solid black;
   box-sizing: border-box;
+  position: relative;
 }
 
 .node>select {
@@ -226,4 +232,38 @@ input[type=number] {
   margin: 5px;
   text-decoration: none;
   color: black;
+}
+
+#rightClickMenu {
+  position: fixed;
+  background-color: white;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  z-index: 110;
+  width: 120px;
+  height: 200px;
+  display: none;
+  border-radius: 1rem;
+}
+
+.removeButton {
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #ddd;
+  border: 0;
+  border-radius: 0 50%  0 50%;
+  width: 15px;
+  height: 15px;
+  cursor: pointer;
+}
+
+.node:hover>.removeButton {
+  display: block;
+}
+
+@media (hover: none) {
+  .removeButton {
+    display: block;
+  }
 }
